[gd_scene load_steps=14 format=2]

[ext_resource path="res://Asset/Ship/PlayerShip1.png" type="Texture" id=1]
[ext_resource path="res://Script/Player/PlayerDefault.gd" type="Script" id=2]
[ext_resource path="res://Asset/Material/EngnePowerParticlePlayer.material" type="Material" id=3]
[ext_resource path="res://Asset/Ship/Shield.png" type="Texture" id=4]
[ext_resource path="res://Asset/Material/Smoke.material" type="Material" id=5]
[ext_resource path="res://Asset/Font/PressStart2P-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Asset/Ship/PlayerMarker.png" type="Texture" id=7]
[ext_resource path="res://Script/TuretFollow/TurretFollow.gd" type="Script" id=8]
[ext_resource path="res://Asset/Ship/PlayerTuret.png" type="Texture" id=9]
[ext_resource path="res://Scene/Bullet/BulletPlayer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Asset/Ship/PowerUp SpriteSheet.png" type="Texture" id=11]

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 2
emission_box_extents = Vector3( 3, 3, 3 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
scale = 7.0
color = Color( 0.290196, 0.290196, 0.290196, 1 )

[sub_resource type="DynamicFont" id=13]
size = 5
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="DefaultPlayer" type="KinematicBody2D" groups=["Player"]]
light_mask = 3
collision_mask = 0
script = ExtResource( 2 )

[node name="DemageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="TurboEngineParticle" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
fixed_fps = 15
local_coords = false
process_material = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 3
texture = ExtResource( 1 )

[node name="SmokeParticle" type="Particles2D" parent="."]
position = Vector2( -3.35189, -0.562733 )
z_index = 1
emitting = false
amount = 15
lifetime = 2.0
fixed_fps = 15
local_coords = false
process_material = ExtResource( 5 )

[node name="SmokeParticle2" type="Particles2D" parent="."]
position = Vector2( -3.35189, -0.562733 )
z_index = 1
emitting = false
fixed_fps = 15
process_material = SubResource( 12 )

[node name="ShieldSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.3, 0.53, 3, 0.78 )
self_modulate = Color( 2, 2, 2, 0.8 )
scale = Vector2( 1.2, 1.2 )
z_index = 1
texture = ExtResource( 4 )

[node name="Muzzle1" type="Position2D" parent="."]
position = Vector2( -8.5, -8 )

[node name="Muzzle2" type="Position2D" parent="."]
position = Vector2( 8.5, -8 )

[node name="PlayeerMarker" type="TextureRect" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
margin_left = -8.64645
margin_top = -28.0607
margin_right = 9.35355
margin_bottom = -10.0607
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="PlayeerMarker"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -7.06017
margin_right = 8.0
margin_bottom = 2.93983
custom_fonts/font = SubResource( 13 )
text = "P1"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="CooldownAbilityTimer" type="Timer" parent="."]
wait_time = 30.0

[node name="RocketShootTime" type="Timer" parent="."]
wait_time = 30.0

[node name="ShootTime" type="Timer" parent="."]

[node name="DFRAbilityTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShieldAbilityTime" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Turret_Follow" type="KinematicBody2D" parent="."]
visible = false
rotation = 1.5708
collision_layer = 0
collision_mask = 0
script = ExtResource( 8 )
bullet_scene = ExtResource( 10 )
muzzle_path = NodePath("Position2D")
target_group = "Enemy"

[node name="Sprite" type="Sprite" parent="Turret_Follow"]
position = Vector2( -2, 0 )
rotation = -1.5708
texture = ExtResource( 9 )

[node name="Position2D" type="Position2D" parent="Turret_Follow"]
position = Vector2( -7.27075, 9.53674e-07 )

[node name="RocketShoot" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -1 )
texture = ExtResource( 11 )
hframes = 2
vframes = 2
frame = 2

[node name="RocketMuzzle1" type="Position2D" parent="RocketShoot"]
position = Vector2( -10, -5 )

[node name="RocketMuzzle2" type="Position2D" parent="RocketShoot"]
position = Vector2( 10, -5 )

[connection signal="body_entered" from="DemageArea" to="." method="_on_DemageArea_body_entered"]
[connection signal="timeout" from="RocketShootTime" to="." method="_on_RocketShootTime_timeout"]
[connection signal="timeout" from="ShootTime" to="." method="_on_ShootTime_timeout"]
[connection signal="timeout" from="DFRAbilityTime" to="." method="_on_DFRAbilityTime_timeout"]
[connection signal="timeout" from="ShieldAbilityTime" to="." method="_on_ShieldAbilityTime_timeout"]
